--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       // Detect in-app browsers
       if (/instagram|fbav|tiktok|messenger/i.test(ua)) {
         // Try to force Safari or Chrome
-        let target = "https://onlyfans.com/zaddymaxy";
+        let target = "https://spicey.link/zaddymaxy";
         let chromeIntent = "googlechrome://navigate?url=" + encodeURIComponent(target);
         let safariIntent = "x-web-search://?" + encodeURIComponent(target);
 
@@ -33,7 +33,7 @@
           window.location.href = target;
         }
       } else {
-        window.location.replace("https://onlyfans.com/zaddymaxy");
+        window.location.replace("https://spicey.link/zaddymaxy");
       }
     };
   </script>
